p2/manifests/app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1 # deployment selector label. it must be the same as the pod template label and service selector label
  template:
    metadata:
      labels:
        app: app1 # pod template label. it must be the same as the deployment selector label
    spec:
      containers:
      - name: app1-container
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    app: app1 # service selector label. it must be the same as the deployment selector label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
