p2/manifests/app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2 # deployment selector label. it must be the same as the pod template label and service selector label
  template:
    metadata:
      labels:
        app: app2 # pod template label. it must be the same as the deployment selector label
    spec:
      containers:
      - name: app2-container
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2 # service selector label. it must be the same as the deployment selector label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
